<resources>
    <string name="app_name">SHARE YACHT</string>
    <string name="login">LOGIN</string>
    <string name="normal_user">일반</string>
    <string name="corp_user">요트 사업자</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="signup_message">아직 회원이 아니신가요?</string>
    <string name="signup_ko">회원가입</string>
    <string name="next">NEXT</string>
    <string name="name">이름</string>
    <string name="birth">생년월일(8자리)</string>
    <string name="phone">전화번호</string>
    <string name="zipcode">우편번호</string>
    <string name="address">기본주소</string>
    <string name="address_detail">상세주소</string>
    <string name="signup">SIGN UP</string>
    <string name="price_unit">원</string>
    <string name="per_hour">(/시간)</string>
    <string name="logout_ko">로그아웃</string>
    <string name="title_qr_check">QR 체크인</string>
    <string name="title_reservation">예약내역</string>
    <string name="title_user_info">상세정보 입력</string>
    <string name="title_signup">회원가입</string>
    <string name="male">남</string>
    <string name="female">여</string>
    <string name="add_yacht">요트 등록</string>
    <string name="yacht_name">요트 이름</string>
    <string name="yacht_serial_number">요트 시리얼넘버</string>
    <string name="yacht_max_people">최대 탑승 가능 인원(명)</string>
    <string name="yacht_location">탑승 위치</string>
    <string name="yacht_price">시간 당 가격(1인)</string>
</resources>