<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.shareyacht.shareyacht.viewmodel.AddYachtViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.owner.AddYachtActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/add_yacht" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/addPhotoButton"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/yachtNameEditText"
                    style="@style/EditTextBase"
                    android:hint="@string/yacht_name"
                    android:inputType="text"
                    android:text="@={viewModel.yachtName}" />

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/serialNumEditText"
                    style="@style/EditTextBase"
                    android:hint="@string/yacht_serial_number"
                    android:inputType="text"
                    android:text="@={viewModel.yachtNum}" />

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/maxPeopleEditText"
                    style="@style/EditTextBase"
                    android:hint="@string/yacht_max_people"
                    android:inputType="number"
                    android:text="@={viewModel.maxPeople}" />

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/locationEditText"
                    style="@style/EditTextBase"
                    android:hint="@string/yacht_location"
                    android:inputType="text"
                    android:text="@={viewModel.location}" />

                <View style="@style/Divider" />

                <EditText
                    android:id="@+id/priceEditText"
                    style="@style/EditTextBase"
                    android:hint="@string/yacht_price"
                    android:inputType="number"
                    android:text="@={viewModel.price}" />

                <Button
                    android:id="@+id/addYachtButton"
                    style="@style/MainButton"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginVertical="15dp"
                    android:onClick="@{() -> viewModel.uploadYacht()}"
                    android:text="@string/add_yacht" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>